2009-02-10  Ross Burton  <ross@linux.intel.com>

	* src/sj-prefs.c:
	Handle the file or path pattern combo containing a custom
	combo (#339089).

2009-02-10  Ross Burton  <ross@linux.intel.com>

	* libjuicer/sj-extracting.c:
	Fix a brainfart.

2009-02-10  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	Require GStreamer 0.10.15.

	* libjuicer/sj-extracting.c:
	Don't use GST_TAG_MUSICBRAINZ_SORTNAME, instead use
	ARTIST_SORTNAME. Also assume the Musicbrainz tags exist.
	
2009-02-10  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	Remove musicbrainz data if the album artist and title are
	edited (#566431).

2009-02-10  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	Fix error handling if the glade file isn't found.

2009-02-10  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	Free the option context once we're done with it (#569008) and
	rearrange startup a bit.

2009-02-09  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	Allow unsetting of disc number.

2009-02-09  Ross Burton  <ross@linux.intel.com>

	* data/sound-juicer.glade:
	Actually add a changed handler for the disc number (#537550)

2009-02-07  Ross Burton  <ross@linux.intel.com>

	* src/sj-prefs.c:
	Use disk number in the rest of the patterns.

2009-02-07  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	* libjuicer/sj-extractor.c:
	Don't use // comments (#569140)

2009-01-26  Pedro Fragoso  <ember@ubuntu.com>

	* libjuicer/sj-extractor.c:
	* libjuicer/sj-extractor.h:
	* libjuicer/sj-metadata-cdtext.c:
	* libjuicer/sj-util.h:
	* src/gconf-bridge.c:
	* src/gconf-bridge.h:
	* src/gedit-message-area.h:
	* src/sj-about.c:
	* src/sj-about.h:
	* src/sj-extracting.c:
	* src/sj-extracting.h:
	* src/sj-main.h:
	* src/sj-play.c:
	* src/sj-play.h:
	* src/sound-juicer.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes #563798)

2009-02-07  Ross Burton  <ross@linux.intel.com>

	* data/sound-juicer.schemas.in:
	* src/sj-prefs.c: