@@ -1,5 +1,13 @@
 2009-02-10  Ross Burton  <ross@linux.intel.com>
 
+	* configure.in:
+	Look for libcanberra-gtk.
+
+	* src/sj-prefs.c:
+	Use canberra to play a sound when the rip is complete (#469258).
+	
+2009-02-10  Ross Burton  <ross@linux.intel.com>
+
 	* src/sj-prefs.c:
 	Handle the file or path pattern combo containing a custom
 	combo (#339089).
